# serializer version: 1
# name: test_all_entities[binary_sensor.ampio_obj_146-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ampio_obj_146',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_146',
    'supported_features': 0,
    'translation_key': 'input',
    'unique_id': 'obj_146',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_146-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Przycisk kino',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_146',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_166-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ampio_obj_166',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_166',
    'supported_features': 0,
    'translation_key': 'alarm_armed',
    'unique_id': 'obj_166',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_166-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm strefa parter',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_166',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_167-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ampio_obj_167',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_167',
    'supported_features': 0,
    'translation_key': 'alarm_alarmed',
    'unique_id': 'obj_167',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_167-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm naruszenie parter',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_167',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_81_blocks_closing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ampio_obj_81_blocks_closing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Closing lock',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_81_blocks_closing',
    'supported_features': 0,
    'translation_key': 'blocks_closing',
    'unique_id': 'obj_81_blocks_closing',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_81_blocks_closing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Roleta Sypialnia Closing lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_81_blocks_closing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_81_blocks_opening-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ampio_obj_81_blocks_opening',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Opening lock',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_81_blocks_opening',
    'supported_features': 0,
    'translation_key': 'blocks_opening',
    'unique_id': 'obj_81_blocks_opening',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_81_blocks_opening-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Roleta Sypialnia Opening lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_81_blocks_opening',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_82_blocks_closing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ampio_obj_82_blocks_closing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Closing lock',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_82_blocks_closing',
    'supported_features': 0,
    'translation_key': 'blocks_closing',
    'unique_id': 'obj_82_blocks_closing',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_82_blocks_closing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Roleta Kuchnia Closing lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_82_blocks_closing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_82_blocks_opening-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ampio_obj_82_blocks_opening',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Opening lock',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_82_blocks_opening',
    'supported_features': 0,
    'translation_key': 'blocks_opening',
    'unique_id': 'obj_82_blocks_opening',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_82_blocks_opening-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Roleta Kuchnia Opening lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_82_blocks_opening',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_83_blocks_closing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ampio_obj_83_blocks_closing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Closing lock',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_83_blocks_closing',
    'supported_features': 0,
    'translation_key': 'blocks_closing',
    'unique_id': 'obj_83_blocks_closing',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_83_blocks_closing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zaluzja Goscinny Closing lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_83_blocks_closing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_83_blocks_opening-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ampio_obj_83_blocks_opening',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Opening lock',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_obj_83_blocks_opening',
    'supported_features': 0,
    'translation_key': 'blocks_opening',
    'unique_id': 'obj_83_blocks_opening',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_obj_83_blocks_opening-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zaluzja Goscinny Opening lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_obj_83_blocks_opening',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
